# pipa-audio-rotation

./: CMakeLists.txt  pipa-audio-rotation.service
rpm/: pipa-audio-rotation.spec  pipaAudioRotation.spec
src/: pipaAudioRotation.cpp
